All external links should open in a new tab

--- a/views/overview.pug
+++ b/views/overview.pug
@@ -9,31 +9,31 @@ block content
     div(class='col')
       h2 Composites Industry and Recycling
 
-      p  The composites industry currently utilizes more than 30,000 known applications, including applications in aircraft, military, marine, consumer products, automotive, transportation, civil infrastructure, construction, electrical, corrosion and heat resistant equipment. As more applications are developed and the use of composites grows, composite waste sent to landfills grows as well. Using the estimate of 30%, the amount of production waste in 2014 can be estimated to be more than 10,000 metric tons, or 22 million pounds, of commercial recycled carbon fiber (RCF). Lucintel, a market research firm, estimates a 7.4% annual growth in composites through 2017 (Kaziermski, Chuck. &#8220;Growth Opportunities in Global Composites Indsutry, 2012 &#8211; 2017.&#8221; <a href="http://www.lucintel.com/lucintel-globalcompositemarketanalysis-acma2012-educationalsession.pdf.">Link</a>)
+      p  The composites industry currently utilizes more than 30,000 known applications, including applications in aircraft, military, marine, consumer products, automotive, transportation, civil infrastructure, construction, electrical, corrosion and heat resistant equipment. As more applications are developed and the use of composites grows, composite waste sent to landfills grows as well. Using the estimate of 30%, the amount of production waste in 2014 can be estimated to be more than 10,000 metric tons, or 22 million pounds, of commercial recycled carbon fiber (RCF). Lucintel, a market research firm, estimates a 7.4% annual growth in composites through 2017 (Kaziermski, Chuck. &#8220;Growth Opportunities in Global Composites Indsutry, 2012 &#8211; 2017.&#8221; <a href="http://www.lucintel.com/lucintel-globalcompositemarketanalysis-acma2012-educationalsession.pdf." target="_blank">Link</a>)
 
-      p The composite decking market and railing market is estimated to grow from USD 1.70 Billion in 2015 to USD 3.09 Billion by 2020, at a compound annual growth rate (CAGR) of 12.60% from 2015 to 2020. Polyethylene (PE) composite decking and railing hold the largest market share. Polypropylene (PP) composite decking and railing is to have maximum growth during the forecast period. (Market Watch. <em>Composite Decking and Railing (Capped &amp; Uncapped) Market Growth to 2020 Drive by Polyethylene Composites.</em> <a href="http://www.marketwatch.com/story/composite-decking-and-railing-capped-uncapped-market-growth-to-2020-driven-by-polyethylene-composites-2016-01-18-3203216">Link</a>)
+      p The composite decking market and railing market is estimated to grow from USD 1.70 Billion in 2015 to USD 3.09 Billion by 2020, at a compound annual growth rate (CAGR) of 12.60% from 2015 to 2020. Polyethylene (PE) composite decking and railing hold the largest market share. Polypropylene (PP) composite decking and railing is to have maximum growth during the forecast period. (Market Watch. <em>Composite Decking and Railing (Capped &amp; Uncapped) Market Growth to 2020 Drive by Polyethylene Composites.</em> <a href="http://www.marketwatch.com/story/composite-decking-and-railing-capped-uncapped-market-growth-to-2020-driven-by-polyethylene-composites-2016-01-18-3203216" target="_blank">Link</a>)
 
       p Additionally,
         blockqoute(cite='Roundup of composites market outlooks and forecasts') The composites market size of end products in terms of value is projected to reach around $90 billion by 2020 and expected to grow at a CAGR of 7% to 9% between 2015 and 2020, according to “Composites Market by Type, by Manufacturing Technology, by Resin Type, by Application, and by Region &#8211; Global Trends and Forecasts to 2020,&#8221; a new report from MarketsandMarkets (Dallas, TX, US).
-        | (Caliendo, Heather. <cite>Roundup of composites market outlooks and forecasts<cite>. <a href="http://www.compositesworld.com/news/roundup-of-composites-industry-outlook-">Link</a>)
+        | (Caliendo, Heather. <cite>Roundup of composites market outlooks and forecasts<cite>. <a href="http://www.compositesworld.com/news/roundup-of-composites-industry-outlook-" target="_blank">Link</a>)
 
       p Waste stream materials can be a valuable resource, but companies continue to pay for the cost of landfilling composite materials because they do not know how to handle, reuse or sell waste stream materials in a cost-effective way. A key issue in the discussion of utilization of reclaimed composite waste stream material is how to reuse and repurpose materials to avoid landfilling and retain product usefulness.
 
       p: a(class='btn btn-primary btn-lg' role='button' href='/modules') Learn more &raquo;
 
-    div(class="col")
+    div(class='col')
       h2 Resources
-      p: a(href='http://www.carbonconversions.com') Carbon Conversions
-      p: a(href="http://www.compositerecycling.org/") Composite Recycling Technology Center (CRTC)
-      p: a(href="http://www.compositesworld.com/") Composites World
-      p: a(href="http://www.compositesworld.com/suppliers") Composites World SourceBook
-      p: a(href="http://www.isri.org/home") Institute of Scrap Recycling Industries, Inc. (ISRI)
-      p: a(href="http://www.scrap.org/") Scrap Magazine
-      p: a(href="https://www.trekbikes.com/us/en_US/story/second_life/") Trek Bikes
-      p: a(href="http://www.commerce.wa.gov/growing-the-economy/energy/clean-energy-fund/") Washington State Clean Energy Fund
-      p: a(href="http://www.wsra.net/") Washington State Recycling Association (WSRA)
+      p: a(href='http://www.carbonconversions.com' target='_blank') Carbon Conversions
+      p: a(href='http://www.compositerecycling.org/' target='_blank') Composite Recycling Technology Center (CRTC)
+      p: a(href='http://www.compositesworld.com/' target='_blank') Composites World
+      p: a(href='http://www.compositesworld.com/suppliers' target='_blank') Composites World SourceBook
+      p: a(href='http://www.isri.org/home' target='_blank') Institute of Scrap Recycling Industries, Inc. (ISRI)
+      p: a(href='http://www.scrap.org/' target='_blank') Scrap Magazine
+      p: a(href='https://www.trekbikes.com/us/en_US/story/second_life/' target='_blank') Trek Bikes
+      p: a(href='http://www.commerce.wa.gov/growing-the-economy/energy/clean-energy-fund/' target='_blank') Washington State Clean Energy Fund
+      p: a(href='http://www.wsra.net/' target='_blank') Washington State Recycling Association (WSRA)
       h4 YouTube
-      p: a(href='https://www.youtube.com/watch?v=lidRk_KvBzM') Adesso &#8211; A leading solution provider for recyclable composite manufacturing and recycling
-      p: a(href='https://www.youtube.com/watch?v=Z2inwFBdQ9g') Arkema Group &#8211; What is a composite?
-      p: a(href='https://www.youtube.com/watch?v=wYbBiYr1yQs') Elium&reg;, the resin which makes composites recyclable
-      p: a(href='https://www.youtube.com/watch?v=9q0vIRPMVlQ') Fiberon Eco-friendly &amp; Sustainable Composite Decking – How It’s Made
+      p: a(href='https://www.youtube.com/watch?v=lidRk_KvBzM' target='_blank') Adesso &#8211; A leading solution provider for recyclable composite manufacturing and recycling
+      p: a(href='https://www.youtube.com/watch?v=Z2inwFBdQ9g' target='_blank') Arkema Group &#8211; What is a composite?
+      p: a(href='https://www.youtube.com/watch?v=wYbBiYr1yQs' target='_blank') Elium&reg;, the resin which makes composites recyclable
+      p: a(href='https://www.youtube.com/watch?v=9q0vIRPMVlQ' target='_blank') Fiberon Eco-friendly &amp; Sustainable Composite Decking – How It’s Made
