--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,7 @@ block content
   div(class='jumbotron')
     h1(class='display-3') Composite Scrap Database
     p(class='lead') Find information on composite scrap, available composite scrap, and existing composite recyclers.
-    p: a(class='btn btn-primary btn-lg' role='button' href='database') Search &raquo;
+    p: a(class='btn btn-primary btn-lg' role='button' href='/search') Search &raquo;
 
   div(class='row')
     div(class='col')
@@ -21,7 +21,7 @@ block content
     div(class='col')
       h3 A composites industry overview
       p Read more about the composites industry and find additional resources.
-      p: a(class='btn btn-secondary' role='button' href='/overview') View details &raquo;
+      p: a(class='btn btn-secondary' role='button' href='/learn/overview') View details &raquo;
     div(class='col')
       h3 The CRTEP project
       p Read more about the Composites Recycling Technician Education Program (CRTEP) and explore the educational modules.
