--- a/views/layout.pug
+++ b/views/layout.pug
@@ -31,11 +31,9 @@ html(lang='en')
             li(class='nav-item')
               a(class='nav-link' id='nav-link-about' href='/about') About
             li(class='nav-item')
-              a(class='nav-link' id='nav-link-overview' href='/overview') Overview
+              a(class='nav-link' id='nav-link-learn' href='/learn') Learn
             li(class='nav-item')
-              a(class='nav-link' id='nav-link-modules' href='/modules') Modules
-            li(class='nav-item')
-              a(class='nav-link' id='nav-link-database' href='/database') Database
+              a(class='nav-link' id='nav-link-search' href='/search') Search
             li(class='nav-item')
               a(class='nav-link' id='nav-link-contact' href='/contact') Contact
           //- Buttons
