--- a/views/modules.pug
+++ b/views/modules.pug
@@ -3,7 +3,7 @@ extends layout
 
 block scripts
   script(src='/js/nav.js')
-  script window.onload = activate('modules')
+  script window.onload = activate('learn')
 
 block content
   div(class='row')
