--- a/views/overview.pug
+++ b/views/overview.pug
@@ -2,7 +2,7 @@ extends layout
 
 block scripts
   script(src='/js/nav.js')
-  script window.onload = activate('overview')
+  script window.onload = activate('learn')
 
 block content
   div(class='row')
@@ -19,7 +19,7 @@ block content
 
       p Waste stream materials can be a valuable resource, but companies continue to pay for the cost of landfilling composite materials because they do not know how to handle, reuse or sell waste stream materials in a cost-effective way. A key issue in the discussion of utilization of reclaimed composite waste stream material is how to reuse and repurpose materials to avoid landfilling and retain product usefulness.
 
-      p: a(class='btn btn-primary btn-lg' role='button' href='/modules') Learn more &raquo;
+      p: a(class='btn btn-primary btn-lg' role='button' href='/learn/modules') Learn more &raquo;
 
     div(class='col')
       h2 Resources
