--- a/views/search.pug
+++ b/views/search.pug
@@ -3,7 +3,7 @@ extends layout
 block scripts
   script(src='/js/db.js')
   script(src='/js/nav.js')
-  script window.onload = activate('database')
+  script window.onload = activate('search')
 
 block content
   div(class='row justify-content-center')
