--- a/views/login.pug
+++ b/views/login.pug
@@ -17,6 +17,8 @@ html(lang='en')
   body
     div(class='container')
       div(class='row justify-content-center')
+        img(class='m-2' src='/images/logo.svg' alt='Composite Recycling')
+      div(class='row justify-content-center')
         form(class='form-login w-25' action='/user/login' method='post')
           div(class='form-group')
             label(for='email') E-mail
