--- a/views/search.pug
+++ b/views/search.pug
@@ -1,9 +1,7 @@
 extends layout
 
 block scripts
-  script(src='/js/db.js')
-  script(src='/js/nav.js')
-  script window.onload = activate('search')
+  script(src='/js/search.js')
 
 block content
   div(class='row justify-content-center')
