Add view names to titles

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html(lang='en')
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(name='description' content='A resource to find information on composite scrap, available composite scrap, and existing composite recyclers.')
 
-    title Composites Recycling
+    title Composites Recycling - #{view}
 
     //- FontAwesom JaveScript
     script(src="https://use.fontawesome.com/f71a763071.js")
