--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ html(lang='en')
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
 
-    title Composites Recycling - Login
+    title Composites Recycling - login
 
     link(
       rel='stylesheet'
