--- a/views/layout.pug
+++ b/views/layout.pug
@@ -39,11 +39,11 @@ html(lang='en')
           //- Buttons
           div(class='btn-group ml-auto p-2' role='group')
             button(type='button' class='btn btn-primary' onclick=authenticated ? 'location.pathname=\'/user/folder\'' : 'location.pathname=\'/login\'')
-              i(class="fa fa-cog")
+              i(class='fa fa-cog')
             button(type='button' class='btn btn-primary' onclick=authenticated ? 'location.pathname=\'/user/folder\'' : 'location.pathname=\'/login\'')
-              i(class="fa fa-folder")
+              i(class='fa fa-folder')
             button(type='button' class='btn btn-primary' onclick=authenticated ? 'location.pathname=\'/user/logout\'' : 'location.pathname=\'/login\'')
-              i(class="fa fa-user")
+              i(class='fa fa-user')
 
       main(role='main')
         block content
