--- a/views/layout.pug
+++ b/views/layout.pug
@@ -43,7 +43,7 @@ html(lang='en')
             button(type='button' class='btn btn-primary' onclick=authenticated ? 'location.pathname=\'/user/folder\'' : 'location.pathname=\'/login\'')
               i(class='fa fa-folder')
             button(type='button' class='btn btn-primary' onclick=authenticated ? 'location.pathname=\'/user/logout\'' : 'location.pathname=\'/login\'')
-              i(class='fa fa-user')
+              i(class='fa' class=authenticated ? 'fa-user-times' : 'fa-user')
 
       main(role='main')
         block content
