--- a/views/layout.pug
+++ b/views/layout.pug
@@ -38,9 +38,9 @@ html(lang='en')
               a(class='nav-link' id='nav-link-contact' href='/contact' class={active: view === 'contact'}) Contact
           //- Buttons
           div(class='btn-group ml-auto p-2' role='group')
-            button(type='button' class='btn btn-primary' onclick=authenticated ? 'location.pathname=\'/scrap\'' : 'location.pathname=\'/login\'')
+            button(type='button' class='btn btn-primary' onclick='location.pathname=\'/scrap\'')
               i(class='fa fa-cog')
-            button(type='button' class='btn btn-primary' onclick=authenticated ? 'location.pathname=\'/user/folder\'' : 'location.pathname=\'/login\'')
+            button(type='button' class='btn btn-primary' onclick='location.pathname=\'/user/folder\'')
               i(class='fa fa-folder')
             button(type='button' class='btn btn-primary' onclick=authenticated ? 'location.pathname=\'/user/logout\'' : 'location.pathname=\'/login\'')
               i(class='fa' class=authenticated ? 'fa-user-times' : 'fa-user')
