Add search instructions

--- a/views/search.pug
+++ b/views/search.pug
@@ -38,6 +38,8 @@ block content
               a(class='btn btn-primary mr-2' href='javascript:void(0)') Save
   else
     .row
+      h4 Select Applicable Fields
+    .row
       form(action='/scrap/search' method='post')
         if resins
           .form-group
