--- a/server/views/modules.pug
+++ b/server/views/modules.pug
@@ -17,53 +17,33 @@ block content
                         'Module 9: Design for Recycling',
                         'Module 10: Understanding Public Perception and Consumer Habits']
         for value, index in titles
-          a(class='list-group-item list-group-item-action' id='module-'+index+'-list' data-toggle='list' href='#module-'+index role='tab' style='font-size: 0.85rem;') Module #{index+1}
+          a(class='list-group-item list-group-item-action' id='module-'+index+'-list' data-toggle='list' href='#module-'+index role='tab') Module #{index+1}
 
     div(class='col')
-      div(class='tab-content' id='nav-tabContent')
+      div(class='tab-content' id='nav-tab-content')
         //- Module 1
         div(class='tab-pane fade' id='module-0' role='tabpanel')
-          h3= titles[0]
-          h4: a(href='#') Module 1 Outline
-          h4
-            b 1.a 
-            a(href='#') A Brief Introduction to Composites
-          h4
-            b 1.b 
-            a(href='#') “Waste” versus “Scrap”
-          h4
-            b 1.c 
-            a(href='#') Recycling Trends
-          h4
-            b 1.d 
-            a(href='#') Industry Perspective on Recyclings
-          h4
-            b 1.e 
-            a(href='#') Basic Introduction to Current Composite Recycling in Industry
+          h3(class='text-center')= titles[0]
+          h5: a(href='#') Module 1 Outline
+          ol(type='a')
+            li: a(href='#') A Brief Introduction to Composites
+            li: a(href='#') “Waste” versus “Scrap”
+            li: a(href='#') Recycling Trends
+            li: a(href='#') Industry Perspective on Recyclings
+            li: a(href='#') Basic Introduction to Current Composite Recycling in Industry
         //- Module 5
         div(class='tab-pane fade' id='module-4' role='tabpanel')
-          h3= titles[4]
-            h4: a(href='#') Module 5 Outline
-            h4
-              b 5.a 
-              a(href='#') Six Sources of Manufacturing Scrap
-            h4
-              b 5.b 
-              a(href='#') Raw Material and Material Trim-Offs Scrap
-            h4
-              b 5.c 
-              a(href='#') Part Trim-Offs Scrap
-            h4
-              b 5.d 
-              a(href='#') Machining/Finishing Scrap
-            h4
-              b 5.e 
-              a(href='#') Reject Parts and End of Life Components as Scrap
-            h4
-              b 5.f 
-              a(href='#') Storing versus Landfilling versus Outsourcing Scrap
+          h3(class='text-center')= titles[4]
+          h5: a(href='#') Module 5 Outline
+          ol(type='a')
+            li: a(href='#') Six Sources of Manufacturing Scrap
+            li: a(href='#') Raw Material and Material Trim-Offs Scrap
+            li: a(href='#') Part Trim-Offs Scrap
+            li: a(href='#') Machining/Finishing Scrap
+            li: a(href='#') Reject Parts and End of Life Components as Scrap
+            li: a(href='#') Storing versus Landfilling versus Outsourcing Scrap
         //- Generate tabs for empty modules
         - const missing = [...titles.keys()].filter(function (i) { return ![0, 4].includes(i) })
         each i in missing
           div(class='tab-pane fade' id='module-'+i role='tabpanel')
-            h3= titles[i]
+            h3(class='text-center')= titles[i]
