--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -22,7 +22,7 @@ html(lang='en')
         div(class='row justify-content-center')
           div(class='alert alert-danger' role='alert')= error
       div(class='row justify-content-center')
-        form(class='form-login w-25' action='/user/login' method='post')
+        form(class='form-login w-25' action='/login' method='post')
           div(class='form-group')
             label(for='email') E-mail
             input(type='email' name='email' class=error ? 'form-control is-invalid' : 'form-control' placeholder='E-mail address' required autofocus)
