--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -16,7 +16,7 @@ block content
     div(class='col')
       h3 A composites industry overview
       p Read more about the composites industry and find additional resources.
-      p: a(class='btn btn-secondary' role='button' href='/learn/overview') View details &raquo;
+      p: a(class='btn btn-secondary' role='button' href='/overview') View details &raquo;
     div(class='col')
       h3 The CRTEP project
       p Read more about the Composites Recycling Technician Education Program (CRTEP) and explore the educational modules.
