--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -3,7 +3,7 @@ html(lang='en')
   head
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
-    title Admin
+    title Composites Recycling
   body
     div(id='root')
     script(src='/js/bundle.js')
