Add description to index

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -3,6 +3,7 @@ html(lang='en')
   head
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    meta(name='description' content='A resource to find information on composite scrap, available composite scrap, and existing composite recyclers.')
     title Composites Recycling
   body
     div(id='root')
